[package]
name = "rocket-etagged-raw-response"
version = "0.10.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-etagged-raw-response"
homepage = "https://magiclen.org/rocket-etagged-raw-response"
keywords = ["rocket", "server", "web", "response", "etag"]
categories = ["web-programming"]
description = "This crate provides a response struct used for responding raw data with **Etag** cache."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
mime = "0.3"
mime_guess = "2"
url-escape = "0.1"

rocket-etag-if-none-match = { git = "https://github.com/magiclen/rocket-etag-if-none-match", version = "0.4.0" }

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false