[package]
name = "rocket-etagged-raw-response"
version = "0.10.2"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/rocket-etagged-raw-response"
homepage = "https://magiclen.org/rocket-etagged-raw-response"
keywords = ["rocket", "server", "web", "response", "etag"]
categories = ["web-programming"]
description = "This crate provides a response struct used for responding raw data with **Etag** cache."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.2"
mime = "0.3"
mime_guess = "2"
url-escape = "0.1"

rocket-etag-if-none-match = "0.4.0"

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false